bzr-svn	1.0.3					  UNRELEASED

 BUG FIXES

  * Mention correct command for obtaining repository UUID.
    (Ralf Doering, #512876)

  * Support passwords specified in authentication.conf. 
    (Jelmer Vernooij, #452121)

  * Cope with CodePlex.com lowercasing the hostname in returned
    repository URLs. (Jelmer Vernooij)

  * Cope with non-ascii characters in files with svn-keywords.
    (Jelmer Vernooij, #515450)

  * Support for the KDE repository layout has been added.
    (Jelmer Vernooij, #506257)

  * Fix export in svn working copies. (Jelmer Vernooij, #524476)

  * Fix use of authentication.conf for svn+http and svn+https. 
    (Jelmer Vernooij, #532292)

  * Cope with new ordering argument to Repository.iter_inventories(). 
    (Jelmer Vernooij, #532363)

  * Fix use of svn:author=author. (Jelmer Vernooij, #527805)

  * Provide BranchConfig._get_change_editor(). 
    (Jelmer Vernooij, #530130)

 FEATURES

  * Support fetching a limited number of revisions. (Michael Hudson)

bzr-svn 1.0.2					  2010-01-22

 BUG FIXES

  * Cope with Google code Subversion repositories a bit better in the 
    layout detection code. (Jelmer Vernooij)
  
  * Push tags when pushing to a new repository. (Jelmer Vernooij, #459444)

  * Cope with non-ascii URLs.
   * During connect. (#456548, Jelmer Vernooij)
   * During repository creation. (#458008, Jelmer Vernooij)

  * Cope with non-ascii characters in svn author names. (#460392, 
    Jelmer Vernooij)

  * Fix expected URL in Repository.__repr__ tests that sometimes causes 
    troubles if the temporary directory contains special characters. 
	(John Szakmeister, #460899)

  * Cope with pushing new non-mainline revisions.  (Jelmer Vernooij, #416328)

  * Support probing for Subversion repositories over existing HTTP transports
    using pycurl. (Jelmer Vernooij, #424626)

  * Show Subversion revno and uuid in "bzr version-info". (Jelmer Vernooij,
    #490771)
