@@ -2,6 +2,9 @@ bzr-svn	1.0.3					  UNRELEASED
 
  BUG FIXES
 
+  * Allow more levels of parent directories for trunk layouts.
+    (Jelmer Vernooij, Debian #573988)
+
   * Mention correct command for obtaining repository UUID.
     (Ralf Doering, #512876)
 
